sonar quality fixes